Adjust top nav styles to avoid the separator pipes from dropping down 1px too low.

--- a/themes/jquery/css/base.css
+++ b/themes/jquery/css/base.css
@@ -1055,7 +1055,7 @@ iframe {
 	text-align: left;
 	display: inline;
 	float: left;
-	margin: 1px 0 0;
+	margin: 0;
 	list-style: none;
 	border-right: 1px solid rgba(255, 255, 255, 0.0976562);
 	border-left: 1px solid rgba(0, 0, 0, 0.347656);
@@ -1070,6 +1070,7 @@ iframe {
 	display: inline-block;
 	float: left;
 	position: relative;
+	top: 1px;
 	padding: 8px 12px;
 	cursor: pointer;
 	-webkit-transition: all 0.2s;
